  - add an explicit return to all exported subs so people don't accidentally
    rely on the return value
  - store coderefs as well as their refaddrs to protect against crazy

1.001002 - 2012-05-05
  - alter duplication test to not provoke Class::Method::Modifiers loading

1.001001 - 2012-04-27
  - remove strictures from one last test file

1.001000 - 2012-04-27
  - Documentation improvements, no code changes

1.000_901 - 2012-04-12
  - Fix MANIFEST inclusion of Role::Basic composition

1.000_900 - 2012-04-11
  - Add composition with tests stolen from Role::Basic

1.000001 - 2012-04-03
  - Document that Class::Method::Modifiers must be depended on separately
  - Update tests so that they skip correctly without C::M::M
  - Add a SEE ALSO section

1.000000 - 2012-03-29
  - Remove redundant code in create_class_with_roles
  - Minor doc fix to does_role
  - Split Role::Tiny out into its own dist

Changes below this line are from when Role::Tiny was still bundled with Moo:

  - Fix a bug where coercions weren't called on lazy default/builder returns
  - Switch Moo::Utils to using Module::Runtime, and add the 5.8 %INC
    leakage fix into Role::Tiny's _load_module to provide partial parity
  - Update incompatibilities with Moose documentation
  - Remove Sub::Quote's outstanding queue since it doesn't actually slow
    things down to do it this way and makes debugging easier.
  - Revert 'local $@' around require calls to avoid triggering Unknown Error
  - Explicitly require Role::Tiny in Role::Tiny::With (RT#70446)
  - Fix spurious 'once' warnings under perl -w

0.009013 - 2011-12-23
  - fix up Class::XSAccessor version check to be more robust
  - improved documentation
  - fix failures on perls < 5.8.3
  - fix test failures on cygwin

0.009012 - 2011-11-15
  - make Method::Generate::Constructor handle $obj->new
  - fix bug where constants containing a reference weren't handled correctly
    (ref(\[]) is 'REF' not 'SCALAR', ref(\v1) is 'VSTRING')

0.009011 - 2011-10-03